[package]
name = "bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tongrams =  { path = "../tongrams" }
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "lookup"
harness = false
