[package]
name = "tongrams"
version = "0.1.4"
edition = "2018"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Tons of N-grams"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tongrams"
repository = "https://github.com/kampersanda/tongrams-rs"
homepage = "https://github.com/kampersanda/tongrams-rs"
keywords = ["n-gram", "language-model", "trie", "compressed", "nlp"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
flate2 = "1.0"
float-cmp = { git = "https://github.com/mikedilger/float-cmp", version = "0.10.0-pre" }
serde_json = "1.0"
sucds = { version = "0.4.0", features = ["intrinsics"] }
yada = "0.5.0"
