[package]
name = "tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tongrams =  { path = "../tongrams" }
anyhow = "1.0"
byteorder = "1.4.3"
extsort = "0.4.2"
rand = "0.8.4"
structopt = "0.3"  # MIT or Apache-2.0

[[bin]]
name = "index"
path = "src/index.rs"

[[bin]]
name = "lookup"
path = "src/lookup.rs"

[[bin]]
name = "stats"
path = "src/stats.rs"

[[bin]]
name = "sort_grams"
path = "src/sort_grams.rs"

[[bin]]
name = "make_noexist_queries"
path = "src/make_noexist_queries.rs"
